[tool.poetry]
name = "cptlib"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.10.0,<3.13"
beautifulsoup4 = ">=4.12.0,<5.0.0"
shapely = ">=2.0.1,<3.0.0"
matplotlib = ">=3.8.0,<4.0.0"
requests = ">=2.31.0,<3.0.0"
pandas = ">=2.1.2,<3.0.0"

[tool.pyright]
# https://github.com/microsoft/pyright/blob/main/docs/configuration.md
useLibraryCodeForTypes = true
exclude = [".cache"]

[tool.ruff]
# https://beta.ruff.rs/docs/configuration/
select = ['E', 'W', 'F', 'I', 'B', 'C4', 'ARG', 'SIM']
ignore = ['W291', 'W292', 'W293']

[build-system]
requires = ["poetry-core>=1.0.0", "wheel", "setuptools", "tomli"]
build-backend = "poetry.core.masonry.api"
